--- a/package.json
+++ b/package.json
@@ -4,39 +4,56 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@graphql-tools/schema": "^10.0.4",
+    "@heroicons/react": "^2.1.5",
     "@refinedev/cli": "^2.16.21",
-    "@refinedev/core": "^4.47.1",
+    "@refinedev/core": "^4.53.0",
     "@refinedev/devtools": "^1.1.32",
-    "@refinedev/kbar": "^1.3.6",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-router-dom": "^6.8.1",
     "@refinedev/graphql": "^6.4.8",
+    "@refinedev/kbar": "^1.3.6",
+    "@refinedev/react-hook-form": "^4.8.20",
+    "@refinedev/react-router-v6": "^4.5.11",
+    "@refinedev/react-table": "^5.6.12",
+    "@refinedev/simple-rest": "^5.0.8",
+    "@tanstack/react-table": "^8.19.3",
+    "@types/react-big-calendar": "^1.8.9",
+    "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
     "graphql": "^15.5.3",
     "graphql-request": "^5.2.0",
-    "@refinedev/react-router-v6": "^4.5.5"
+    "graphql-tag": "^2.12.6",
+    "moment": "^2.30.1",
+    "mysql2": "^3.10.3",
+    "nodemailer": "^6.9.14",
+    "react": "^18.0.0",
+    "react-big-calendar": "^1.13.1",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.25.1",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/node": "^18.16.2",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-toastify": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "typescript": "^5.4.2",
-    "vite": "^4.3.1",
-    "tailwindcss": "^3.4.3",
     "postcss": "^8.4.38",
-    "autoprefixer": "^10.4.19"
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.2",
+    "vite": "^4.3.1"
   },
   "scripts": {
     "dev": "refine dev",
     "build": "tsc && refine build",
     "start": "refine start",
-    "refine": "refine"
+    "refine": "refine",
+    "init-db": "node initDB.js"
   },
   "browserslist": {
     "production": [
@@ -52,5 +69,6 @@
   },
   "refine": {
     "projectId": "oCjyB2-7uvt1j-ic48hA"
-  }
+  },
+  "proxy": "http://localhost:3000"
 }
